tests/sema/fail/v29_fail_extern_empty_struct.ep
# COMPILE_FAIL_CONTAINS: extern UseEmpty parameter value struct EmptyWinStruct must not be empty

type EmptyWinStruct {}

extern "demo.dll" fun UseEmpty(value: EmptyWinStruct): void

fun main(): void {}
